--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,12 @@ cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++11)
 
+find_package(Boost COMPONENTS system filesystem iostreams REQUIRED)
+
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
+set(Boost_INCLUDE_DIR /usr/local/include/boost)
 set(sources src/utils.hpp src/path_planner.cpp src/fsm.cpp src/main.cpp)
 
 
@@ -14,6 +17,8 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/include)
 include_directories(/usr/local/opt/openssl/include)
+include_directories(${Boost_INCLUDE_DIR})
+link_directories(${Boost_LIBRARY_DIR})
 link_directories(/usr/local/lib)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
@@ -23,4 +28,4 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 add_executable(path_planning ${sources})
 
-target_link_libraries(path_planning z ssl uv uWS)
+target_link_libraries(path_planning z ssl uv uWS ${Boost_LIBRARIES})
